methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:28: error: type mismatch;
 found   : Unit
 required: Boolean
  prendBiscuit()
              ^